# storage-app/internal/modules/auth/controllers/auth.controller.go
@@ -48,6 +48,48 @@ func (a *AuthControllerImpl) handleExchangeToken(c *gin.Context) {
 	c.JSON(http.StatusCreated, response.InitResponse[any](true, "Login sucess", nil))
 }
 
+// @Sumary Sign up
+// @Description Sign up
+// @Tags auth
+// @Accept json
+// @Produce json
+// @Param request body presenter.SignUpInput true "information for sign up"
+// @Success 201 {object} response.AppResponse{data=presenter.SignUpOutput} "Sign up success"
+// @Failure 409 {object} response.AppResponse{data=nil} "Email exist, email is pending for cofirm"
+//
+//	@Router   /auth/sign-up [post]
+func (a *AuthControllerImpl) handleSignUp(c *gin.Context) {
+	payload, _ := c.Get(string(constant.PayloadContext))
+	res, err := a.authInteractor.SignUp(c.Request.Context(), payload.(*presenter.SignUpInput))
+	if err != nil {
+		c.Error(err)
+		c.Abort()
+		return
+	}
+	c.JSON(http.StatusCreated, response.InitResponse(true, "Sign up sucess, please check your email for confirmation", res))
+}
+
+// @Sumary Confirm sign up
+// @Description Confirm sign up
+// @Tags auth
+// @Accept json
+// @Produce json
+// @Param request body presenter.ConfirmSignUpInput true "code for confirm"
+// @Success 201 {object} response.AppResponse{data=presenter.ConfirmSignUpOutput} "Confirm sign up success"
+// @Failure 401 {object} response.AppResponse{data=nil} "Invalid confirm code"
+//
+//	@Router   /auth/confirm [post]
+func (a *AuthControllerImpl) handleConfirmSignUp(c *gin.Context) {
+	payload, _ := c.Get(string(constant.PayloadContext))
+	res, err := a.authInteractor.ConfirmSignUp(c.Request.Context(), payload.(*presenter.ConfirmSignUpInput))
+	if err != nil {
+		c.Error(err)
+		c.Abort()
+		return
+	}
+	c.JSON(http.StatusCreated, response.InitResponse(true, "Confirm sign up success, please login again", res))
+}
+
 func (a *AuthControllerImpl) Init(g *gin.RouterGroup) {
 	external := g.Group("/auth")
 	external.POST(
@@ -55,6 +97,17 @@ func (a *AuthControllerImpl) Init(g *gin.RouterGroup) {
 		middleware.ValidateMiddleware[presenter.ExchangeTokenInput](false, binding.JSON),
 		a.handleExchangeToken,
 	)
+	external.POST(
+		"/sign-up",
+		middleware.ValidateMiddleware[presenter.SignUpInput](false, binding.JSON),
+		a.handleSignUp,
+	)
+	external.POST(
+		"/confirm",
+		middleware.ValidateMiddleware[presenter.ConfirmSignUpInput](false, binding.JSON),
+		a.handleConfirmSignUp,
+	)
+
 	external.GET("/callback", func(c *gin.Context) {
 		authCode := c.Query("code")
 		if authCode == "" {
